--- a/.github/workflows/Build_X86_64-Lede个人双开版.yml
+++ b/.github/workflows/Build_X86_64-Lede个人双开版.yml
@@ -37,6 +37,7 @@ env:
   CONFIG_FILE2305: config/lede_config/x86-2305.config
   DIY_P1_SH: diy_script/lede_diy/x86/diy-part1.sh
   DIY_P2_SH: diy_script/lede_diy/x86/diy-part2.sh
+  DIY_P2_SH2305: diy_script/lede_diy/x86/diy2305-part2.sh
   CLASH_KERNEL: amd64
   UPLOAD_BIN_DIR: false
   UPLOAD_CONFIG: true
@@ -193,9 +194,9 @@ jobs:
         [ -e files ] && mv files openwrt/files
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
         chmod +x $GITHUB_WORKSPACE/diy_script/*.sh
-        chmod +x $DIY_P2_SH
+        chmod +x $DIY_P2_SH2305
         cd openwrt
-        $GITHUB_WORKSPACE/$DIY_P2_SH
+        $GITHUB_WORKSPACE/$DIY_P2_SH2305
         $GITHUB_WORKSPACE/diy_script/preset-JejzWrt.sh
         $GITHUB_WORKSPACE/diy_script/preset-clash-core.sh $CLASH_KERNEL
         $GITHUB_WORKSPACE/diy_script/preset-adguard-core.sh $CLASH_KERNEL
