--- a/.github/workflows/Build_X86_64-Lede个人双开版.yml
+++ b/.github/workflows/Build_X86_64-Lede个人双开版.yml
@@ -334,13 +334,13 @@ jobs:
       uses: ncipollo/release-action@v1
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success'
       with:
-        name: ${{ env.DATE }} 🔴「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」[个人双开版]固件
+        name: ${{ env.DATE }} 🔴「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」[LEDE-1806个人双开版]固件
         allowUpdates: true
         removeArtifacts: true
-        tag: ${{ env.TAG }}_Personal_${{ env.KERNEL }}
+        tag: ${{ env.TAG }}_L1806Personal_${{ env.KERNEL }}
         token: ${{ secrets.GH_TOKEN }}
         body: |
-          **This is LEDE Firmware for ${{ env.FILE_NAME }}**
+          **This is LEDE-1806 Firmware for ${{ env.FILE_NAME }}**
           ### 📒 固件信息
           - 🔴【个人双开版方便不用改ip】
           - 💻 平台架构: ${{ env.FILE_NAME }}
@@ -376,7 +376,7 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
-          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[个人双开版]编译完成
+          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[LEDE-1806个人双开版]编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.END }}
           编译耗时：${{ env.time }}
@@ -386,15 +386,15 @@ jobs:
           内容: ${{ env.commit }}
           hash: ${{ env.hash }}
           ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
-          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}_Personal_${{ env.KERNEL }}
+          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}_L1806Personal_${{ env.KERNEL }}
 
     - name: Push notification upload success
       uses: xhnmt/pushplus-action@main
       with:
         token: ${{ secrets.PUSH_PLUS_TOKEN }}
-        title: "[个人双开版]${{ env.FILE_NAME }}_${{ env.KERNEL }}编译完成"
+        title: "[LEDE-1806个人双开版]${{ env.FILE_NAME }}_${{ env.KERNEL }}编译完成"
         content: |
-          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[个人双开版]编译完成
+          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[LEDE-1806个人双开版]编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.END }}
           编译耗时：${{ env.time }}
@@ -404,7 +404,7 @@ jobs:
           内容: ${{ env.commit }}
           hash: ${{ env.hash }}
           ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
-          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}_Personal_${{ env.KERNEL }}
+          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}_L1806Personal_${{ env.KERNEL }}
 # //////////////////////////////////////////////////////////////////////////////////////////////
   Build_x86_64_2305_515:
     needs: [Checka]
