--- a/.github/workflows/ARMv8_ROOTFS-Lede.yml
+++ b/.github/workflows/ARMv8_ROOTFS-Lede.yml
@@ -15,11 +15,6 @@ on:
         required: true
         default: false
         type: boolean
-      toolchain:
-        description: '使用toolchain缓存'
-        required: false
-        default: true
-        type: boolean
   #schedule:
     #- cron: 0 18 * * *
 
@@ -39,7 +34,7 @@ env:
   TZ: Asia/Shanghai
   FILE_NAME: ARMv8-ROOTFS
   PRODUCT_NAME: ARMv8-ROOTFS
-  TOOLCHAIN: ${{ github.event.inputs.toolchain }}
+  TOOLCHAIN: true
   
 jobs: 
   job_init: 
