--- a/.github/workflows/Build_X86_64-Lede_2305.yml
+++ b/.github/workflows/Build_X86_64-Lede_2305.yml
@@ -40,11 +40,6 @@ on:
         required: true
         default: false
         type: boolean
-      toolchain:
-        description: '使用toolchain缓存'
-        required: false
-        default: true
-        type: boolean
   schedule:
     - cron: 36 18 * * *
 
@@ -64,7 +59,7 @@ env:
   TZ: Asia/Shanghai
   FILE_NAME: x86_64
   PRODUCT_NAME: x86_64
-  TOOLCHAIN: ${{ github.event.inputs.toolchain }}
+  TOOLCHAIN: true
 
 jobs:
   Checka:
