--- a/.github/workflows/Build_X86_64-OpenWrt.yml
+++ b/.github/workflows/Build_X86_64-OpenWrt.yml
@@ -20,11 +20,6 @@ on:
         required: true
         default: false
         type: boolean
-      toolchain:
-        description: '使用toolchain缓存'
-        required: false
-        default: true
-        type: boolean
   schedule:
     - cron: 6 19 * * *
 
@@ -44,7 +39,7 @@ env:
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
   FILE_NAME: x86_64
-  TOOLCHAIN: ${{ github.event.inputs.toolchain }}
+  TOOLCHAIN: true
 
 jobs:
   Checka:
