--- a/.github/workflows/Build_X86_64-OpenWrt.yml
+++ b/.github/workflows/Build_X86_64-OpenWrt.yml
@@ -11,12 +11,12 @@ on:
   workflow_dispatch:
     inputs:
       checkupdates:
-        description: 'Checkupdates connection to Actions'
+        description: 'OpenWrt connection to Actions'
         required: true
         default: false
         type: boolean
       checkupdatesD:
-        description: 'Checkupdates Docker connection to Actions'
+        description: 'OpenWrt-Docker connection to Actions'
         required: true
         default: false
         type: boolean
