--- a/.github/workflows/Build_X86_64-Lede_1806.yml
+++ b/.github/workflows/Build_X86_64-Lede_1806.yml
@@ -11,32 +11,32 @@ on:
   workflow_dispatch:
     inputs:
       checkupdates54:
-        description: 'Checkupdates54 connection to Actions'
+        description: 'LEDE_1806_54 connection to Actions'
         required: true
         default: false
         type: boolean
       checkupdates510:
-        description: 'Checkupdates510 connection to Actions'
+        description: 'LEDE_1806_510 connection to Actions'
         required: true
         default: false
         type: boolean
       checkupdates515:
-        description: 'Checkupdates515 connection to Actions'
+        description: 'LEDE_1806_515 connection to Actions'
         required: true
         default: false
         type: boolean
       checkupdates61:
-        description: 'Checkupdates61 connection to Actions'
+        description: 'LEDE_1806_61 connection to Actions'
         required: true
         default: false
         type: boolean
       checkupdates66:
-        description: 'Checkupdates66 connection to Actions'
+        description: 'LEDE_1806_66 connection to Actions'
         required: true
         default: false
         type: boolean
       checkupdates612:
-        description: 'Checkupdates612 connection to Actions'
+        description: 'LEDE_1806_612 connection to Actions'
         required: true
         default: false
         type: boolean
