--- a/.github/workflows/Build_X86_64-Lede_2305.yml
+++ b/.github/workflows/Build_X86_64-Lede_2305.yml
@@ -11,27 +11,27 @@ on:
   workflow_dispatch:
     inputs:
       checkupdates54:
-        description: 'Checkupdates54 connection to Actions'
+        description: 'LEDE_2305_54 connection to Actions'
         required: true
         default: false
         type: boolean
       checkupdates515:
-        description: 'Checkupdates515 connection to Actions'
+        description: 'LEDE_2305_515 connection to Actions'
         required: true
         default: false
         type: boolean
       checkupdates61:
-        description: 'Checkupdates61 connection to Actions'
+        description: 'LEDE_2305_61 connection to Actions'
         required: true
         default: false
         type: boolean
       checkupdates66:
-        description: 'Checkupdates66 connection to Actions'
+        description: 'LEDE_2305_66 connection to Actions'
         required: true
         default: false
         type: boolean
       checkupdates612:
-        description: 'Checkupdates612 connection to Actions'
+        description: 'LEDE_2305_612 connection to Actions'
         required: true
         default: false
         type: boolean
