--- a/.github/workflows/Build_X86_64-Lede_Docker.yml
+++ b/.github/workflows/Build_X86_64-Lede_Docker.yml
@@ -1286,7 +1286,7 @@ jobs:
       uses: actions/upload-artifact@main
       if: env.UPLOAD_CONFIG == 'true' && steps.compile.outputs.status == 'success'
       with:
-        name: x86-54-config
+        name: x86-2305-54-config
         path: ./artifact/buildinfo/
 
     - name: Delete files
@@ -1601,7 +1601,7 @@ jobs:
       uses: actions/upload-artifact@main
       if: env.UPLOAD_CONFIG == 'true' && steps.compile.outputs.status == 'success'
       with:
-        name: x86-515-config
+        name: x86-2305-515-config
         path: ./artifact/buildinfo/
 
     - name: Delete files
@@ -1916,7 +1916,7 @@ jobs:
       uses: actions/upload-artifact@main
       if: env.UPLOAD_CONFIG == 'true' && steps.compile.outputs.status == 'success'
       with:
-        name: x86-66-config
+        name: x86-2305-66-config
         path: ./artifact/buildinfo/
 
     - name: Delete files
