--- a/.github/workflows/Build_X86_64-OpenWrt.yml
+++ b/.github/workflows/Build_X86_64-OpenWrt.yml
@@ -681,7 +681,7 @@ jobs:
       uses: ncipollo/release-action@v1
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success'
       with:
-        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」[OpenWrt-Docker]固件
+        name: ${{ env.DATE }} 🐳「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」[OpenWrt-Docker]固件
         allowUpdates: true
         removeArtifacts: true
         tag: ${{ env.TAG }}_opD_${{ env.KERNEL }}
