--- a/config/openwrt_config/x86.config
+++ b/config/openwrt_config/x86.config
@@ -150,7 +150,7 @@ CONFIG_GRUB_BAUDRATE=115200
 # CONFIG_GRUB_FLOWCONTROL is not set
 CONFIG_GRUB_BOOTOPTS=""
 CONFIG_GRUB_TIMEOUT="1"
-CONFIG_GRUB_TITLE="ImmortalWrt"
+CONFIG_GRUB_TITLE="OpenWrt"
 # CONFIG_ISO_IMAGES is not set
 # CONFIG_VDI_IMAGES is not set
 # CONFIG_VMDK_IMAGES is not set
