--- a/config/lede_config/x86-docker.config
+++ b/config/lede_config/x86-docker.config
@@ -227,8 +227,8 @@ CONFIG_GRUB_SERIAL="ttyS0"
 CONFIG_GRUB_BAUDRATE=115200
 # CONFIG_GRUB_FLOWCONTROL is not set
 CONFIG_GRUB_BOOTOPTS=""
-CONFIG_GRUB_TIMEOUT="0"
-CONFIG_GRUB_TITLE="OpenWrt"
+CONFIG_GRUB_TIMEOUT="1"
+CONFIG_GRUB_TITLE="LEDE"
 # CONFIG_ISO_IMAGES is not set
 # CONFIG_QCOW2_IMAGES is not set
 # CONFIG_VDI_IMAGES is not set
