--- a/.github/workflows/Build-immo-toolchain.yml
+++ b/.github/workflows/Build-immo-toolchain.yml
@@ -63,7 +63,7 @@ jobs:
       matrix:
         repo: [immortalwrt]
         branch: [master, openwrt-23.05]
-        target: [x86_64, rockchip_armv8, armsr_armv8]
+        target: [x86_64, armsr_armv8]
 
     env:
       REPO_URL: https://github.com/${{ matrix.repo }}/${{ matrix.repo }}
