--- a/.github/workflows/Build_X86_64-ImmortalWrt_OpenWrt.yml
+++ b/.github/workflows/Build_X86_64-ImmortalWrt_OpenWrt.yml
@@ -747,6 +747,7 @@ jobs:
     env:
       REPO_URL: https://github.com/immortalwrt/immortalwrt
       REPO_BRANCH: openwrt-23.05
+      FEEDS_CONF_immo: feeds_config/immo.feeds.conf.default
       CONFIG_FILE: config/immo_config/x86.config
       CONFIG_FILED: config/immo_config/x86-docker.config
       DIY_P1_SH: diy_script/immo_diy/x86/diy-part1.sh
